# usti-toolchain

./: Cargo.toml  README.md  test.asm
src/eusti/: main.rs  vm.asm
src/vm/: add.asm  jmp.asm  mov.asm  stack.asm  vm.asm
src/vm/inc/: add.inc.asm  device.inc.asm  inc.asm  jmp.inc.asm  mov.inc.asm  sub.inc.asm
src/vm/lib/: call.lib.asm  heap.lib.asm  lib.asm  regs.lib.asm  stack.lib.asm
src/vm/lib/values/: hexspeak.asm  mask.asm  number.asm  values.lib.asm
