[package]
name = "usti-toolchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eusti"
path = "src/eusti/main.rs"

[dependencies]
customasm = "0.11.12-x"

[patch.crates-io]
customasm = { path = "../customasm"  }